syntax = "proto3";
package auth;

service AuthService {
  rpc CreateUser (CreateUserRequest) returns (User);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc FindUserById (FindUserRequest) returns (User);
  rpc FindUserByEmail (FindUserRequestByEmail) returns (User);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  int32 code = 1;
  oneof value {
    string message = 2;
    User user = 3;
  }
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int32 code = 1;
  oneof value {
    string message = 2;
    string accessToken = 3;
  }
}

message FindUserRequest {
  int32 id = 1; // Changed to int32
  string token = 2;
}

message FindUserRequestByEmail {
  string email = 1;
  string token = 2;
}

message User {
  int32 id = 1; // Changed to int32
  string email = 2;
}